--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
+        "fakerphp/faker": "^1.9.1",
         "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nascent-africa/jetstrap": "^2.5",
@@ -47,9 +47,7 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
+        "post-create-project-cmd": ["@php artisan key:generate --ansi"]
     },
     "extra": {
         "laravel": {
