--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
         "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
