feat(NPM run production): Asset compiled for production ✨

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6c01068eac630eaa2a9c",
+    "/css/app.css": "/css/app.css?id=966b8fa0bc053597ebc2"
 }
