--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,15 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+# php -- BEGIN cPanel-generated handler, do not edit
+<IfModule fcgid_module>
+    <IfModule mime_module>
+        AddHandler fcgid-script .php .php7 .phtml
+        FcgidWrapper /usr/local/cpanel/cgi-sys/ea-php73 .php
+        FcgidWrapper /usr/local/cpanel/cgi-sys/ea-php73 .php7
+        FcgidWrapper /usr/local/cpanel/cgi-sys/ea-php73 .phtml
+    </IfModule>
+</IfModule>
+
+# php -- END cPanel-generated handler, do not edit
